<resources>
    <string name="app_name">SOLOX3_DIT2B21</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_log_in">LOG IN</string>
    <string name="register">Register</string>
    <string name="btn_register">REGISTER</string>
    <string name="have_account">Already have an account?</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="register_now"><u>Register here.</u></string>
    <string name="login_now"><u>Login here.</u></string>
    <string name="password_check">Re-enter your password</string>
    <string name="your_books">Your Books</string>
    <string name="published">Published</string>
    <string name="drafts">Drafts</string>
    <string name="comments">Comments</string>
    <string name="average_rating">Rating</string>
    <string name="username">Username</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="write_a_book">No books yet. Write a book!</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Changes To Profile</string>
    <string name="comment_history">Comment History</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favourite_books">Favourite Books</string>
    <string name="reading_history">Reading History</string>
    <string name="bio">Bio</string>
    <string name="enter_bio">Enter Bio (Maximum 150 Characters)</string>
</resources>