<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="left"
    android:padding="20dp"
    tools:context=".Register">

    <TextView
        android:text="@string/register"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/email"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_hide_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/password_check"
        android:hint="@string/password_check"
        android:inputType="textPassword" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_hide_password_check" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        app:boxCornerRadiusTopEnd="10dp"-->
<!--        app:boxCornerRadiusTopStart="10dp">-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/email"-->
<!--            android:hint="@string/email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        app:boxCornerRadiusTopEnd="10dp"-->
<!--        app:boxCornerRadiusTopStart="10dp">-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password"-->
<!--            android:hint="@string/password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        app:boxCornerRadiusTopEnd="10dp"-->
<!--        app:boxCornerRadiusTopStart="10dp">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password_check"-->
<!--            android:hint="@string/password_check"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:text="@string/btn_register"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginNow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/have_account"
            android:textAlignment="textEnd"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/loginNow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/login_now"
            android:textColor="#0000FF"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>